Add api server stub
