# src/api/server/swagger_server/models/coordinate.py
@@ -1,0 +1,92 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class Coordinate(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, pos_x: float=None, pos_y: float=None):  # noqa: E501
+        """Coordinate - a model defined in Swagger
+
+        :param pos_x: The pos_x of this Coordinate.  # noqa: E501
+        :type pos_x: float
+        :param pos_y: The pos_y of this Coordinate.  # noqa: E501
+        :type pos_y: float
+        """
+        self.swagger_types = {
+            'pos_x': float,
+            'pos_y': float
+        }
+
+        self.attribute_map = {
+            'pos_x': 'posX',
+            'pos_y': 'posY'
+        }
+        self._pos_x = pos_x
+        self._pos_y = pos_y
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Coordinate':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Coordinate of this Coordinate.  # noqa: E501
+        :rtype: Coordinate
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def pos_x(self) -> float:
+        """Gets the pos_x of this Coordinate.
+
+
+        :return: The pos_x of this Coordinate.
+        :rtype: float
+        """
+        return self._pos_x
+
+    @pos_x.setter
+    def pos_x(self, pos_x: float):
+        """Sets the pos_x of this Coordinate.
+
+
+        :param pos_x: The pos_x of this Coordinate.
+        :type pos_x: float
+        """
+        if pos_x is None:
+            raise ValueError("Invalid value for `pos_x`, must not be `None`")  # noqa: E501
+
+        self._pos_x = pos_x
+
+    @property
+    def pos_y(self) -> float:
+        """Gets the pos_y of this Coordinate.
+
+
+        :return: The pos_y of this Coordinate.
+        :rtype: float
+        """
+        return self._pos_y
+
+    @pos_y.setter
+    def pos_y(self, pos_y: float):
+        """Sets the pos_y of this Coordinate.
+
+
+        :param pos_y: The pos_y of this Coordinate.
+        :type pos_y: float
+        """
+        if pos_y is None:
+            raise ValueError("Invalid value for `pos_y`, must not be `None`")  # noqa: E501
+
+        self._pos_y = pos_y
