# src/api/server/swagger_server/swagger/swagger.yaml
@@ -1,45 +1,45 @@
 openapi: 3.0.0
 info:
-  description: Post-it digitalization API
-  version: "1.0.0"
   title: Post-it digitalization API
+  description: Post-it digitalization API
   contact:
     email: muellerobin95@gmail.com
   license:
     name: GNU General Public License v3.0
-    url: 'https://www.gnu.org/licenses/gpl-3.0.en.html'
-    
-# Auto Mocking Plugin
+    url: https://www.gnu.org/licenses/gpl-3.0.en.html
+  version: 1.0.0
 servers:
-  - description: SwaggerHub API Auto Mocking
-    url: https://virtserver.swaggerhub.com/RobinTTYTeam/AppliedAI/1.0.0
-
+- url: https://virtserver.swaggerhub.com/RobinTTYTeam/AppliedAI/1.0.0
+  description: SwaggerHub API Auto Mocking
 paths:
   /indexPostIts:
     post:
       summary: Detects Post-it notes and digitalizes their contents
-      operationId: indexPostIts
       description: |
         By passing in the appropriate options, you can digitalize
         the contents of Post-it notes
+      operationId: index_post_its
       parameters:
-        - in: query
-          name: pictureLink
-          description: A link to the picture to be digitalized. Only required if no request body is provided.
-          required: true
-          schema:
-            type: string
+      - name: pictureLink
+        in: query
+        description: A link to the picture to be digitalized. Only required if no
+          request body is provided.
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: string
       requestBody:
-        description: Picture containing the Post-it notes to digitalize. Only required if no query parameter is provided.
-        required: true
+        description: Picture containing the Post-it notes to digitalize. Only required
+          if no query parameter is provided.
         content:
           image/png:
             schema:
               type: string
               format: binary
-              
+        required: false
       responses:
-        '200':
+        "200":
           description: Digitalized Post-It notes.
           content:
             application/json:
@@ -47,19 +47,21 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/PostIt'
-        '400':
+                x-content-type: application/json
+        "400":
           description: Malformed request
+      x-openapi-router-controller: swagger_server.controllers.default_controller
 components:
   schemas:
     PostIt:
-      type: object
       required:
-        - id
-        - contents
-        - color
-        - coordinates
-        - width
-        - height
+      - color
+      - contents
+      - coordinates
+      - height
+      - id
+      - width
+      type: object
       properties:
         id:
           type: string
@@ -81,11 +83,19 @@ components:
           type: number
           format: double
           example: 71.91
+      example:
+        color: '#aa43a0'
+        contents: This is the text of a Post-It.
+        coordinates:
+          posX: 17.39
+          posY: 83.91
+        width: 25.24
+        id: d290f1ee-6c54-4b01-90e6-d701748f0851
+        height: 71.91
     Coordinate:
       required:
-        - posX
-        - posY
-        - posZ
+      - posX
+      - posY
       properties:
         posX:
           type: number
@@ -95,3 +105,7 @@ components:
           type: number
           format: double
           example: 83.91
+      example:
+        posX: 17.39
+        posY: 83.91
+
